config header behavior fixed-top

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <main class="container-fluid">
-    <app-header></app-header>
+    <app-header
+        [brandIconName]="'bi-box-arrow-up-right'"
+        [fixedOnTop]="true"
+    ></app-header>
 </main>
