add main background gradient effect

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 @import "~bootstrap/dist/css/bootstrap.css";
+
+html, body {
+    background-image: linear-gradient(to right bottom,#0d1d3a,#1a2f55 52%,#365a83);
+    color: #fff;
+}
