add footer component and config shared.module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main class="container-fluid">
-    <app-header
-        [brandIconName]="'bi-box-arrow-up-right'"
-        [fixedOnTop]="true"
-    ></app-header>
+    <app-header [fixedOnTop]="true">
+        <app-icon [iconName]="'bi-cpu-fill'" [fontSize]="'2rem'" brandLogo></app-icon>
+    </app-header>
+    <app-footer></app-footer>
 </main>
